# strudel

./: CHANGES.md  Cargo.toml  README.md  deploy.sh
.cargo/: config
.circleci/: config.yml
ext/: dashboard.json  pitemp.service  strudel.service
src/pitemp/: http.rs  lib.rs  metrics.rs  sensor.rs
src/strudel/: http.rs  lib.rs  metrics.rs  sensor.rs
src/strudel/sensor/: core.rs  dht22.rs  mod.rs  test.rs
