[package]
name = "strudel"
version = "0.3.0"
authors = ["Nick Pillitteri"]
description = "Export DHT22 temperature and humidity sensor readings as Prometheus metrics"
homepage = "https://github.com/56quarters/strudel"
repository = "https://github.com/56quarters/strudel"
readme = "README.md"
license = "GPL-3.0+"
edition = "2021"

[dependencies]
clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
rppal = "0.13.1"
hyper = { version = "0.14.16", features = ["full"] }
tokio = { version = "1.14.0", features = ["full"] }
prometheus = { version = "0.13.0", features = ["process"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"

[lib]
name = "strudel"
path = "src/strudel/lib.rs"