[package]
name = "strudel"
version = "0.5.0"
authors = ["Nick Pillitteri"]
description = "Export DHT22 temperature and humidity sensor readings as Prometheus metrics"
homepage = "https://github.com/56quarters/strudel"
repository = "https://github.com/56quarters/strudel"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["dht22", "temperature", "hardware"]
edition = "2021"

[dependencies]
clap = { version = "3.0.4", features = ["cargo", "derive", "std"], default-features = false }
prometheus = { version = "0.13.0", features = ["process"] }
rppal = "0.13.1"
tokio = { version = "1.14.0", features = ["full"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"
warp = "0.3.2"

[lib]
name = "strudel"
path = "src/strudel/lib.rs"