[package]
name = "strudel"
version = "0.7.0"
authors = ["Nick Pillitteri"]
description = "Export DHT22 temperature and humidity sensor readings as Prometheus metrics"
homepage = "https://github.com/56quarters/strudel"
repository = "https://github.com/56quarters/strudel"
readme = "README.md"
license = "GPL-3.0+"
keywords = ["dht22", "temperature", "hardware", "prometheus"]
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "4.1.8", features = ["cargo", "derive", "help", "error-context", "std", "usage", "wrap_help"], default_features = false }
prometheus-client = "0.21.2"
rppal = "0.13.1"
tokio = { version = "1.14.0", features = ["full"] }
tower-http = { version = "0.4.4", features = ["trace"] }
tracing = "0.1.29"
tracing-subscriber = "0.3.5"

[lib]
name = "strudel"
path = "src/strudel/lib.rs"